# GenericUnrealEngineManager

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  utils.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: env.rs  lib.rs  main.rs  prelude.rs
src-tauri/src/misc/: errors.rs  menu.rs  mod.rs  payloads.rs  prelude.rs  progress.rs  tray.rs
src-tauri/src/projects/: mod.rs  payloads.rs
src-tauri/src/projects/actions/: behavior.rs  mod.rs  plugin_manager.rs  project_cleaner.rs  project_compressor.rs  project_discovery.rs  project_launcher.rs
src-tauri/src/projects/models/: mod.rs  plugins.rs  project.rs
src-tauri/src/settings/actions/: autostart_manager.rs  mod.rs  settings_manager.rs
src-tauri/src/settings/models/: settings.rs
src/components/: BottomPanel.vue  DevelopmentPanel.vue  FileExplorerButton.vue  InfoItem.vue  InfoPanel.vue  InfoTooltip.vue  LogsPanel.vue  MainArea.vue  PluginsView.vue  PopupManager.vue  ProjectBar.vue  Sidebar.vue  SidebarItem.vue  TaskProgressBar.vue
src/components/popups/: ProjectCleanPopup.vue  ProjectCompressPopup.vue  ProjectDiscoveryPopup.vue  ProjectLaunchChoicePopup.vue  ProjectManagerPopup.vue  SettingsPopup.vue  WelcomePopup.vue
src/composables/: usePopup.ts
src/stores/: logStore.ts  projectStore.ts
src/styles/: variables.css
src/utils/: fuzzySearch.ts  mockProjects.ts
