[package]
name = "Generic_Unreal_Engine_Manager"
version = "0.1.0"
description = "UE Project Manager is a free and open source tool to manage Unreal Engine projects, allowing you to execute many operation on all your project in a click."
authors = ["Lucas Guichard <lucasguichard127@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "generic_unreal_engine_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = ["colored"] }
tauri-plugin-store = "2.2.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-autostart = "2.0.0"
tokio = "1.45.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"
log = "0.4.27"
lazy_static = "1.5.0"
glob = "0.3.2"
serde_json = "1.0.140"
fs_extra = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.5.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"